added initial models and migration

--- a/.env_example
+++ b/.env_example
@@ -6,7 +6,7 @@ SECRET_KEY=something-something-darkside
 SERVER_NAME=example.com:5000
 
 # Database config
-DATABASE_URL=sqlite:////tmp/dev.db
+DATABASE_URI=sqlite:////tmp/dev.db
 SQLALCHEMY_TRACK_MODIFICATIONS=False
 
 # Logging
